# robotic_arm_6_dof_example_7

./: README.md
r6dof_bringup/: CMakeLists.txt  package.xml
r6dof_bringup/config/: r6bot_controller.yaml
r6dof_bringup/launch/: r6bot_controller.launch.py  send_trajectory.launch.py
r6dof_bringup/reference_generator/: send_trajectory.cpp
r6dof_controller/: CMakeLists.txt  package.xml  r6dof_controller.xml
r6dof_controller/include/r6dof_controller/: r6bot_controller.hpp  r6bot_hardware.hpp
r6dof_controller/src/: r6bot_controller.cpp  r6bot_hardware.cpp
r6dof_description/: CMakeLists.txt  package.xml
r6dof_description/launch/: display_r6dof.launch.xml
r6dof_description/ros2_control/: r6bot.ros2_control.xacro
r6dof_description/urdf/: r6bot.urdf.xacro  r6bot_description.urdf.xacro
